# SoundTrainingSetFiltering

./: .gitignore  README.md  VoiceFilterGUI.spec  gui_voice_filter.py  pyproject.toml  voice_filter.py
scripts/: build_gui_exe.ps1  run_pilot.ps1  setup_uvr_env.ps1
src/voice_filter_pipeline/: __init__.py  audio.py  cli.py  config.py  features.py  fs.py  manifest.py  pipeline.py  separation.py
tests/: test_features.py  test_filter_split.py  test_gui.py  test_manifest.py  test_pipeline_checkpoint.py  test_pipeline_inputs.py  test_separation.py  test_uvr_folder.py
